package sys.stamp;
import "monad/rpc/protocol/command.proto";

option java_package = "nirvana.hall.protocol.sys.stamp";

option java_outer_classname = "SavePortraitProto";

//人像保存请求
message SavePortraitRequest {
    extend monad.rpc.protocol.BaseCommand {
        optional SavePortraitRequest cmd = 10223;
    }
    required string personId = 1;
    required string gatherData = 2;
}

message SavePortraitResponse {
    extend monad.rpc.protocol.BaseCommand {
        optional SavePortraitResponse cmd = 10234;
    }
    optional string next = 1;
}